ghc-4335c07/testsuite/tests/patsyn/should_run/unboxed-wrapper.hs
{-# LANGUAGE PatternSynonyms, MagicHash #-}
module Main where

import GHC.Base

pattern P1 = 42#

main = do
    print $ I# P1
