ghc-4335c07/testsuite/tests/patsyn/should_fail/unboxed-wrapper-naked.hs
{-# LANGUAGE PatternSynonyms, MagicHash #-}
module ShouldFail where

import GHC.Base

pattern P1 = 42#

x = P1
